--- a/src/Vilt-adapter-debug.ipynb
+++ b/src/Vilt-adapter-debug.ipynb
@@ -2,21 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "d60eb8b7",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'torch'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-b4a55662c598>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpdb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnn\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'torch'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
@@ -46,13 +35,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "dc86ff8b",
    "metadata": {},
    "outputs": [],
    "source": [
     "from cl_evaluation.evaluate_cl_algorithm import forward_transfer_eval, catastrophic_forgetting_eval\n",
     "from configs.model_configs import model_configs\n",
     "from configs.task_configs import task_configs, SUPPORTED_VL_TASKS\n",
-    "from configs.adapter_configs import ADAPTER_MAP\n",
     "from utils.seed_utils import set_seed\n",
     "\n",
     "class Args:\n",
@@ -62,6 +51,7 @@
     "        self.batch_size = 32\n",
     "        self.mcl_data_dir = '/data/datasets/MCL/'\n",
     "        self.pretrained_model_name = 'dandelin/vilt-b32-mlm'\n",
+    "        self.adapter_config = 'houlsby'\n",
     "\n",
     "args = Args()"
    ]
@@ -69,6 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1f7a3137",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +70,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "b5b27f03",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "from modeling.vilt_modeling import ViltContinualLearner, ViltEncoderWrapper\n",
@@ -100,17 +94,80 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e7adf72d",
    "metadata": {},
    "outputs": [],
    "source": [
     "ckpt_path = os.path.join('/data/experiments/MCL', 'vilt-sequential_ft-task0_vqa-task1_nlvr2-task2_snli-ve', \\\n",
-    "                        'checkpoints', 'task1_nlvr2', 'model')\n",
+    "                        'checkpoints', 'task2_snli-ve', 'model')\n",
     "model.load_state_dict(torch.load(ckpt_path))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "413e685f",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "from transformers.adapters import AdapterConfig\n",
+    "adapter_config = AdapterConfig.load(args.adapter_config)\n",
+    "model.add_adapter('snli-ve', config=adapter_config)\n",
+    "model.add_adapter('nlvr2', config=adapter_config)\n",
+    "model.to(device)\n",
+    "model.set_active_adapters('snli-ve')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94217ffd",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "from data.visionlanguage_datasets.snli_ve_dataset import build_snli_ve_dataloader\n",
+    "from data.image_datasets.flickr30kimages_dataset import Flickr30KImagesDataset\n",
+    "\n",
+    "    \n",
+    "snli_ve_config = task_configs['snli-ve']\n",
+    "data_dir = os.path.join(args.mcl_data_dir, snli_ve_config['data_dir'])\n",
+    "images_source = snli_ve_config['images_source']\n",
+    "flickr30k_config = task_configs[images_source]\n",
+    "images_dataset = Flickr30KImagesDataset(os.path.join(args.mcl_data_dir, flickr30k_config['data_dir']))\n",
+    "\n",
+    "val_dataloader = build_snli_ve_dataloader(args=args,\n",
+    "                                          data_dir=data_dir,\n",
+    "                                          images_dataset=images_dataset,\n",
+    "                                          split='dev',\n",
+    "                                          tokenizer=None,\n",
+    "                                          visual_mode=visual_mode)\n",
+    "model.eval()\n",
+    "eval_score = 0\n",
+    "t = tqdm(val_dataloader, desc='Evaluating on SNLI-VE val set')\n",
+    "total = 0\n",
+    "for step, batch in enumerate(t):\n",
+    "    inputs = batch2inputs_converter(batch)\n",
+    "    if step+1 == 10:\n",
+    "        break\n",
+    "    with torch.no_grad():\n",
+    "        output = model(task_key='snli-ve', **inputs)\n",
+    "        logits = output[1]\n",
+    "\n",
+    "    batch_scores = (logits.argmax(-1).cpu() == batch['labels'])\n",
+    "    eval_score += batch_scores.sum().item()\n",
+    "    total += batch_scores.shape[0]\n",
+    "    t.set_postfix({'score': eval_score/total})\n",
+    "eval_score = eval_score/len(val_dataloader.dataset)*100.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "377c5dcc",
    "metadata": {
     "scrolled": true
    },
@@ -118,8 +175,10 @@
    "source": [
     "from data.visionlanguage_datasets.nlvr2_dataset import build_nlvr2_dataloader\n",
     "\n",
+    "    \n",
     "nlvr_config = task_configs['nlvr2']\n",
     "data_dir = os.path.join(args.mcl_data_dir, nlvr_config['data_dir'])\n",
+    "\n",
     "val_dataloader = build_nlvr2_dataloader(args=args,\n",
     "                                          data_dir=data_dir,\n",
     "                                          split='val',\n",
@@ -130,6 +189,8 @@
     "total = 0\n",
     "for step, batch in enumerate(t):\n",
     "    inputs = batch2inputs_converter(batch)\n",
+    "    if step+1 == 10:\n",
+    "        break\n",
     "    with torch.no_grad():\n",
     "        output = model(task_key='nlvr2', **inputs)\n",
     "        logits = output[1]\n",
@@ -144,6 +205,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f8deb194",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "import transformers\n",
+    "print(transformers.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b21f3434",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c956b345",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -151,9 +236,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "mclada",
    "language": "python",
-   "name": "python3"
+   "name": "mclada"
   },
   "language_info": {
    "codemirror_mode": {
@@ -165,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
